objects/Feature__c.object
<CustomObject>
    <description>A movie being shown</description>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Musical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science Fiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>War</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trailer_Impressions__c</fullName>
        <label>Trailer Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Release_Date__c</columns>
        <columns>Genre__c</columns>
        <columns>Trailer_Impressions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>